# ShanghaiCopyright

./: .pdm.toml  .pre-commit-config.yaml  README.md  main.py  package.json  pyproject.toml
config/: configs.example.yml
libs/: authorization.py  exceptions.py  models.py
utils/: __init__.py  session_wrapper.py  yaml_reader.py
