[tool]
[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Silverowo", email = "1581647952@qq.com"},
]
dependencies = [
    "asyncio>=3.4.3",
    "pathlib>=1.0.1",
    "loguru>=0.6.0",
    "aiohttp>=3.8.4",
    "pydantic>=1.10.5",
    "pyyaml>=6.0",
]
requires-python = ">=3.10"
license = {text = "APGL v3"}
